--- a/static/config/Configuration.php.example
+++ b/static/config/Configuration.php.example
@@ -46,7 +46,7 @@ $_CONFIG['app_url'] = 'http://localhost/';
  * 2. Add that 'lang-lang' here, without .json ending.
  * 3. Good to go.
  */
-$_CONFIG['app_lang'] = 'fi_FI';
+$_CONFIG['app_lang'] = 'en_US';
 
 /**
  * Set's cost for user password hash, created in registration.
